--- a/css/default.css
+++ b/css/default.css
@@ -1,17 +1,27 @@
-.flex-container-meny {
-    max-width: 600px;
-    min-width: 375px;
+body {
+    margin: 0;
 }
 
 nav ul {
     display: flex;
+    border-top: solid;
+    border-bottom: double;
+    background-color: steelblue;
     list-style-type: none;
     margin: 0;
-    padding-left: 20px;
+    padding: 0;
+    justify-content: space-around;
 }
 
 nav a {
     text-decoration: none;
     display: block;
-    padding: 17px;
+    padding: 20px;
+    color: white;
+    font-family: monospace;
+    font-size: 30px;
+}
+
+nav a:hover {
+    color: cornflowerblue;
 }
