--- a/css/default.css
+++ b/css/default.css
@@ -45,7 +45,7 @@ nav a:hover {
     color: cornflowerblue;
 }
 
-/* hr {
+hr {
     height: 1px;
     color: #2a5aa8;
 }
@@ -82,43 +82,3 @@ footer a {
     color: white;
     place-self: center;
 }
-
-.contact {
-    display: grid;
-    grid-template-rows: auto;
-    grid-template-columns: 0.3fr 0.3fr 1fr;
-    justify-items: center;
-}
-
-.contact ul {
-    list-style-type: none;
-    place-self: center;
-}
-
-.contact h2 {
-    place-self: center;
-}
-
-.contact p {
-    place-self: center;
-}
-
-.contact ul li a {
-    text-decoration: none;
-}
-
-.socialmedia ul {
-    list-style-type: none;
-    display: grid;
-    grid-template-rows: auto;
-    grid-template-columns: repeat(6, 90px);
-    justify-content: end;
-}
-
-.socialmedia ul li a {
-    text-decoration: none;
-}
-
-[class*="fa"] {
-    color: black;
-} */
