--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,12 @@
 body {
-    margin: 0;
-    padding: 0;
+    width: 1400px;
+    padding-left: 10%;
 }
 
 .grid-container {
     display: grid;
     grid-template-columns: repeat(3, auto);
-    grid-template-rows: repeat(5, auto);
+    grid-template-rows: repeat(9, auto);
     grid-template-areas: 
     "header header header"
     "nav nav nav"
@@ -64,9 +64,12 @@ nav a:hover {
 main {
     grid-area: main;
     color: white;
+    font-family: 'Dancing Script', cursive;
+    font-size: 30px;
     padding-top: 50px;
     text-align: center;
-    height: 600px;
+    margin-top: 30px;
+    height: 700px;
     background-size: cover;
     background-image: url(../img/house.png);
 }
