--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,12 @@
 body {
-    width: 1400px;
-    padding-left: 10%;
+    box-sizing: border-box;  
+    margin: 0;
 }
 
 .grid-container {
     display: grid;
+    margin: 0;
+    box-sizing: border-box;
     grid-template-columns: repeat(3, auto);
     grid-template-rows: repeat(9, auto);
     grid-template-areas: 
@@ -12,7 +14,7 @@ body {
     "nav nav nav"
     "main main main"
     "img1 img2 img3"
-    "footer footer footer"
+    "footer footer footer";
 }
 
 header {
@@ -45,7 +47,7 @@ nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 nav a {
@@ -54,7 +56,7 @@ nav a {
     padding: 20px;
     color: white;
     font-family: monospace;
-    font-size: 30px;
+    font-size: 20px;
 }
 
 nav a:hover {
@@ -76,20 +78,20 @@ main {
 
 .img1 {
     grid-area: img1;
-    height: 350px;
-    margin: 30px;
+    height: 300px;
+    margin: 30px auto;
 }
 
 .img2 {
     grid-area: img2;
-    height: 350px;
-    margin: 30px;
+    height: 300px;
+    margin: 30px auto;
 }
 
 .img3 {
     grid-area: img3;
-    height: 350px;
-    margin: 30px;
+    height: 300px;
+    margin: 30px auto;
 }
 
 footer {
