--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+:root {
+    /*Sizing*/
+    --main-width: 70%;
+    --main-margin: 30px auto 0;
+}
+
 body {
     box-sizing: border-box;  
     margin: 0;
@@ -6,14 +12,13 @@ body {
 .grid-container {
     display: grid;
     margin: 0;
-    box-sizing: border-box;
     grid-template-columns: repeat(3, auto);
     grid-template-rows: repeat(9, auto);
     grid-template-areas: 
     "header header header"
     "nav nav nav"
     "main main main"
-    "img1 img2 img3"
+    "article1 article1 article1"
     "footer footer footer";
 }
 
@@ -55,7 +60,7 @@ nav a {
     display: block;
     padding: 20px;
     color: white;
-    font-family: monospace;
+    font-family: 'Dancing Script', cursive;
     font-size: 20px;
 }
 
@@ -67,31 +72,21 @@ main {
     grid-area: main;
     color: white;
     font-family: 'Dancing Script', cursive;
-    font-size: 30px;
+    font-size: 25px;
     padding-top: 50px;
+    padding-bottom: 100px;
     text-align: center;
-    margin-top: 30px;
-    height: 700px;
+    height: 400px;
+    width: var(--main-width);
+    margin: var(--main-margin);
     background-size: cover;
     background-image: url(../img/house.png);
 }
 
-.img1 {
-    grid-area: img1;
-    height: 300px;
-    margin: 30px auto;
-}
-
-.img2 {
-    grid-area: img2;
-    height: 300px;
-    margin: 30px auto;
-}
-
-.img3 {
-    grid-area: img3;
-    height: 300px;
-    margin: 30px auto;
+.article1 {
+    grid-area: article1;
+    width: var(--main-width);
+    margin: var(--main-margin);
 }
 
 footer {
