--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 :root {
-    /*Sizing*/
-    --main-width: 70%;
+    --main-width: 60%;
     --main-margin: 30px auto 0;
 }
 
@@ -19,6 +18,7 @@ body {
     "nav nav nav"
     "main main main"
     "article1 article1 article1"
+    "section1 section2 section3"
     "footer footer footer";
 }
 
@@ -68,6 +68,11 @@ nav a:hover {
     color: cornflowerblue;
 }
 
+aside {
+    grid-area: sidebar;
+    background-color: steelblue;
+}
+
 main {
     grid-area: main;
     color: white;
@@ -76,17 +81,46 @@ main {
     padding-top: 50px;
     padding-bottom: 100px;
     text-align: center;
-    height: 400px;
+    height: 500px;
     width: var(--main-width);
     margin: var(--main-margin);
-    background-size: cover;
     background-image: url(../img/house.png);
+    background-size: cover;
 }
 
 .article1 {
     grid-area: article1;
     width: var(--main-width);
     margin: var(--main-margin);
+    /* background-color: rgb(230, 230, 230); */
+}
+
+
+.section1 {
+    grid-area: section1;
+    height: 250px;
+    width: 250px;
+    margin: var(--main-margin);
+    background-image: url(../img/interior1.png);
+    background-size: cover;
+}
+
+.section2 {
+    grid-area: section2;
+    height: 250px;
+    width: 250px;
+    margin: var(--main-margin);
+    background-image: url(../img/interior1.png);
+    background-size: cover;
+}
+
+.section3 {
+    grid-area: section3;
+    height: 250px;
+    width: 250px;
+    margin: var(--main-margin);
+    background-image: url(../img/interior1.png);
+    background-size: cover;
 }
 
 footer {
