--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,12 @@
 :root {
+    /*Sizing*/
     --main-width: 60%;
     --main-margin: 30px auto 0;
+
+    /*Color*/
+    --main-bg-color: steelblue;
+    --main-text-color: black;
+    --second-text-color: white;
 }
 
 body {
@@ -11,24 +17,17 @@ body {
 .grid-container {
     display: grid;
     margin: 0;
-    grid-template-columns: repeat(3, auto);
-    grid-template-rows: repeat(9, auto);
-    grid-template-areas: 
-    "header header header"
-    "nav nav nav"
-    "main main main"
-    "article1 article1 article1"
-    "section1 section2 section3"
-    "footer footer footer";
+    grid-template-columns: repeat(1, auto);
+    grid-template-rows: repeat(5, auto);
 }
 
 header {
-    grid-area: header;
+    grid-area: 1/1/2/2;
     display: flex;
     font-family: helvetica, times new roman, fantasy, ;
     justify-content: center;
-    background-color: steelblue;
-    color: white;
+    background-color: var(--main-bg-color);
+    color: var(--second-text-color);
     font-size: 50px;
     padding: 30px;
     text-shadow: 0px 3px 5px black;
@@ -41,14 +40,14 @@ header {
 }
 
 nav {
-    grid-area: nav;
+    grid-area: 2/1/3/2;
 }
 
 nav ul {
     display: flex;
     border-top: solid;
     border-bottom: double;
-    background-color: steelblue;
+    background-color: var(--main-bg-color);
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -59,7 +58,7 @@ nav a {
     text-decoration: none;
     display: block;
     padding: 20px;
-    color: white;
+    color: var(--second-text-color);
     font-family: 'Dancing Script', cursive;
     font-size: 20px;
 }
@@ -68,63 +67,95 @@ nav a:hover {
     color: cornflowerblue;
 }
 
-aside {
-    grid-area: sidebar;
-    background-color: steelblue;
+.grid-container2 {
+    grid-area: 3/1/4/2;
+    display: grid;
+    gap: 20px;
+    width: var(--main-width);
+    margin: var(--main-margin);
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(9, auto);
+    grid-template-areas: 
+    "main main main"
+    "article1 article1 article1"
+    "section1 section2 section3"
+    "footer footer footer"
 }
 
 main {
     grid-area: main;
-    color: white;
+    color: var(--second-text-color);
     font-family: 'Dancing Script', cursive;
     font-size: 25px;
     padding-top: 50px;
     padding-bottom: 100px;
     text-align: center;
     height: 500px;
-    width: var(--main-width);
-    margin: var(--main-margin);
     background-image: url(../img/house.png);
     background-size: cover;
+    border: 1px solid black;
 }
 
 .article1 {
     grid-area: article1;
-    width: var(--main-width);
-    margin: var(--main-margin);
-    /* background-color: rgb(230, 230, 230); */
+    color: var(--main-text-color);
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 
 .section1 {
     grid-area: section1;
     height: 250px;
-    width: 250px;
+    width: 300px;
     margin: var(--main-margin);
-    background-image: url(../img/interior1.png);
+    color: var(--second-text-color);
+    background-image: url(../img/house4.jpeg);
     background-size: cover;
+    text-align: center;
+    border: 1px solid black;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .section2 {
     grid-area: section2;
     height: 250px;
-    width: 250px;
+    width: 300px;
     margin: var(--main-margin);
-    background-image: url(../img/interior1.png);
+    color: var(--second-text-color);
+    background-image: url(../img/house2.jpeg);
     background-size: cover;
+    text-align: center;
+    border: 1px solid black;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .section3 {
     grid-area: section3;
     height: 250px;
-    width: 250px;
+    width: 300px;
     margin: var(--main-margin);
-    background-image: url(../img/interior1.png);
+    color: var(--second-text-color);
+    background-image: url(../img/house3.jpeg);
     background-size: cover;
+    text-align: center;
+    border: 1px solid black;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.button {
+    border-radius: 50px;
+    width: 150px;
+    height: 50px;
+    background-color: var(--main-bg-color);
+    color: var(--second-text-color);
+}
+
+.button:hover {
+    background-color: cornflowerblue;
 }
 
 footer {
-    grid-area: footer;
-    background-color: steelblue;
-    color: white;
+    grid-area: 4/1/5/2;
+    background-color: var(--main-bg-color);
+    color: var(--second-text-color);
 }
