--- a/css/about.css
+++ b/css/about.css
@@ -1,300 +1,400 @@
-body {
-    margin: 0;
-    padding: 0;
+
+.section3container {
+    display: grid;
+    grid-template-columns: 0.1fr 0.2fr 0.2fr 0.2fr 0.1fr 0.1fr 0.1fr 0.2fr 0.2fr 0.2fr 0.1fr;
+    grid-template-rows: 0.1fr 0.2fr;
 }
 
-header {
+.section3text1 {
     display: flex;
-    justify-content: center;
-    background-color: steelblue;
+    grid-column: 3 / 6;
+    grid-row: 1 / 1;
+    background-color: grey;
     color: white;
-    font-size: 50px;
-    padding: 30px;
-    max-width: 100%;
-    text-shadow: 0px 3px 5px black;
-    font-weight: 800;
-}
-@media screen and (max-width: 768px) and (min-width: 425px) {
-    header {
-        font-size: 30px;
-    }
-}
-@media screen and (max-width: 425px) and (min-width: 320px) {
-    header {
-        font-size: 30px;
-    }
-}
-@media screen and (max-width: 320px) {
-    header {
-        font-size: 15px;
-    }
-}
-
-.aletter {
-    font-weight: 900;
-    font-size: 55px;
-}
-@media screen and (max-width: 768px) and (min-width: 425px) {
-    .aletter {
-        font-size: 35px;
-    }
-}
-@media screen and (max-width: 425px) and (min-width: 320px) {
-    .aletter {
-        font-size: 35px;
-    }
-}
-@media screen and (max-width: 320px) {
-    .aletter {
-        font-size: 20px;
-    }
-}
-
-nav {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-}
-
-nav ul {
-    display: flex;
-    border-top: solid;
-    border-bottom: double;
-    background-color: steelblue;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    justify-content: center;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0px;
-    bottom: 0;
-}
-@media screen and (max-width: 320px) {
-    nav ul {
-        display: flex;
-        font-size: 10px;
-    }
-}
-
-nav a {
-    text-decoration: none;
-    display: block;
-    padding: 20px;
-    font-family: 'Dancing Script';
-    color: white;
-    font-size: 35px;
-}
-@media screen and (max-width: 768px) and (min-width: 425px) {
-    nav a {
-        font-size: 22px;
-    }
-}
-@media screen and (max-width: 425px) and (min-width: 320px) {
-    nav a {
-        display: flex;
-        font-size: 14px;
-    }
-}
-@media screen and (max-width: 320px) {
-    nav a {
-        display: list-item;
-        justify-content: center;
-        font-size: 10px;
-    }
-}
-
-nav a:hover {
-    color: cornflowerblue;
-}
-
-.section1container {
-    display: grid;
-    grid-template-rows: 0.5fr 0.5fr 0.5fr;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-}
-@media screen and (max-width: 425px) and (min-width: 320px) {
-    .section1container {
-        display: grid;
-        grid-template-rows: 0.1fr;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    }
-}
-@media screen and (max-width: 320px) {
-    .section1container {
-        display: grid;
-        grid-template-rows: 0.1fr;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    }
-}
-
-.section1img {
-    display: grid;
-    grid-column: 1 / 3;
-    grid-row: 1 / 5;
-    width: 250%;
-    border-bottom: double black;
-    border-width: 15px;
-}
-@media screen and (max-width: 425px) and (min-width: 320px) {
-    .section1img {
-        height: 0%;
-        border: unset;
-    }
-}
-@media screen and (max-width: 320px) {
-    .section1img {
-        width: 0px;
-        border: unset;
-    }
-}
-
-.section2container {
-    background-color: white;
-    display: grid;
-    grid-template-columns: 0.1fr 0.2fr 0.2fr 0.1fr 0.1fr 0.1fr 0.2fr 0.2fr 0.2fr 0.1fr;
-    grid-template-rows: 0.1fr 0.1fr 0.1fr 0.1fr;
-}
-@media screen and (max-width: 768px) and (min-width: 425px) {
-    .section2container {
-        display: grid;
-        grid-template-columns: 0.1fr 0.2fr 0.2fr 0.1fr 0.1fr 0.1fr 0.2fr 0.2fr 0.2fr 0.1fr;
-        grid-template-rows: 0.1fr;
-    }
-}
-@media screen and (max-width: 320px) {
-    .section2container {
-        display: grid;
-        grid-template-columns: 0.1fr 0.2fr 0.2fr 0.1fr 0.1fr 0.1fr 0.2fr 0.2fr 0.2fr 0.1fr;
-        grid-template-rows: 0.1fr;
-    }
-}
-
-.section2text1 {
-    display: flex;
     text-align: center;
+    font-size: 25px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    text-shadow: unset -1px 0px 1px silver;
-    grid-column: 2 / 10;
-    grid-row: 2 / 2;
-    background-color: white;
-    font-size: 35px;
-    font-style: italic;
+    padding: 20px;
+    text-shadow: -1px 1px 1px black;
     font-weight: 500;
-    padding: 5px;
-    border-top: solid black;
-    border-bottom: solid black;
-    border-left: thin black;
-    border-right: thin black;
-    border-width: 5px;
-    border-radius: 50px;
-    box-shadow: unset 0px 3px 15px black;
+    font-style: unset;
+    border-left: double white;
+    border-width: 20px;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    box-shadow: -2px 2px 3px black, -4px 4px 5px steelblue;
 }
 @media screen and (max-width: 1440px) and (min-width: 960px) {
-    .section2text {
-        font-size: 30px;
+    .section3text1 {
+        font-size: 25px;
+        grid-column: 2 / 6;
     }
 }
 @media screen and (max-width: 1200px) and (min-width: 960px) {
-    .section2text {
+    .section3text1 {
         font-size: 25px;
+        grid-column: 2 / 6;
     }
 }
 @media screen and (max-width: 960px) and (min-width: 768px) {
-    .section2text {
-        font-size: 25px;
+    .section3text1 {
+        font-size: 22px;
+        grid-column: 2 / 6;
     }
 }
 @media screen and (max-width: 768px) and (min-width: 425px) {
-    .section2text {
-        font-size: 25px;
+    .section3text1 {
+        font-size: 22px;
+        grid-column: 1 / 13;
+        grid-row: 1;
+        border: unset;
+        border-radius: 0;
+        background-color: black;
+        box-shadow: 0px 5px 20px silver;
     }
 }
 @media screen and (max-width: 425px) and (min-width: 320px) {
-    .section2text {
+    .section3text1 {
+        font-size: 22px;
         grid-column: 1 / 13;
-        font-size: 25px;
+        grid-row: 1;
+        border: unset;
+        border-radius: 0;
+        background-color: black;
+        box-shadow: 0px 5px 20px silver;
     }
 }
 @media screen and (max-width: 320px) {
-    .section2text {
-        width: 100%;
-        border-radius: 0px;
+    .section3text1 {
+        width: 90%;
+        font-size: 22px;
         grid-column: 1 / 13;
-        grid-row: 1 / 2;
-        font-size: 20px;
+        grid-row: 1;
+        border: unset;
+        border-radius: 0;
+        background-color: black;
+        box-shadow: 0px 5px 20px silver;
     }
 }
 
-.section1image {
-    grid-column: 6;
+.section3text2 {
+    display: flex;
+    grid-column: 7 / 10;
+    grid-row: 1 / 1;
+    background-color: grey;
+    color: white;
+    text-align: center;
+    font-size: 25px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    padding: 20px;
+    text-shadow: 1px 1px 1px black;
+    font-weight: 500;
+    font-style: unset;
+    border-right: double white;
+    border-width: 20px;
+    border-top-right-radius: 50px;
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    box-shadow:  2px 2px 3px black, 4px 4px 5px steelblue;
+}
+@media screen and (max-width: 1440px) and (min-width: 960px) {
+    .section3text2 {
+        font-size: 25px;
+        grid-column: 7 / 11;
+    }
+}
+@media screen and (max-width: 1200px) and (min-width: 960px) {
+    .section3text2 {
+        font-size: 25px;
+        grid-column: 7 / 11;
+    }
+}
+@media screen and (max-width: 960px) and (min-width: 768px) {
+    .section3text2 {
+        font-size: 22px;
+        grid-column: 7 / 11;
+    }
+}
+@media screen and (max-width: 768px) and (min-width: 425px) {
+    .section3text2 {
+        font-size: 22px;
+        grid-column: 1 / 13;
+        grid-row: 2;
+        border: unset;
+        border-radius: 0;
+        background-color: black;
+        box-shadow: 0px 5px 20px silver;
+    }
+}
+@media screen and (max-width: 425px) and (min-width: 320px) {
+    .section3text2 {
+        font-size: 22px;
+        grid-column: 1 / 13;
+        grid-row: 2;
+        border: unset;
+        border-radius: 0;
+        background-color: black;
+        box-shadow: 0px 5px 20px silver;
+    }
+}
+@media screen and (max-width: 320px) {
+    .section3text2 {
+        font-size: 22px;
+        grid-column: 1 / 12;
+        grid-row: 2;
+        border: unset;
+        border-radius: 0;
+        background-color: black;
+        box-shadow: 0px 5px 20px silver;
+    }
+}
+
+.certifikatcontainer {
+    display: grid;
+    grid-template-columns: 0.5fr 0.5fr 0.2fr 0.2fr 0.2fr 0.2fr 0.2fr 0.2fr 0.2fr 0.5fr 0.5fr;
+    grid-template-rows: 1fr;
+}
+
+.certifikatlogo1 {
     grid-row: 1;
-    margin: 0px;
-    width: 300px;
+    grid-column: 3;
+    width: 140%;
+    align-self: center;
 }
 @media screen and (max-width: 768px) and (min-width: 425px) {
-    .section1image {
-        grid-column: 6;
-        grid-row: 1;
-        margin: 0 auto;
-        width: 150px;
+    .certifikatlogo1 {
+        grid-column: 1;
     }
 }
 @media screen and (max-width: 425px) and (min-width: 320px) {
-    .section1image {
-        grid-column: 6;
-        grid-row: 1;
-        width: 1;
-        width: 0;
-    }
-}
-
-.pigfeet1 {
-    grid-column: 1;
-    grid-row: 2 / 3;
-}
-@media screen and (max-width: 960px) and (min-width: 768px) {
-    .pigfeet1 {
-        width: 0;
-    }
-}
-@media screen and (max-width: 768px) and (min-width: 425px) {
-    .pigfeet1 {
-        width: 0;
-    }
-}
-@media screen and (max-width: 425px) and (min-width: 320px) {
-    .pigfeet1 {
+    .certifikatlogo1 {
+        grid-column: 1;
         width: 0;
     }
 }
 @media screen and (max-width: 320px) {
-    .pigfeet1 {
+    .certifikatlogo1 {
+        grid-column: 1;
         width: 0;
     }
 }
 
-.pigfeet2 {
-    grid-column: 10;
-    grid-row: 2 / 3;
-}
-@media screen and (max-width: 960px) and (min-width: 768px) {
-    .pigfeet2 {
-        width: 0;
-    }
+.certifikatlogo2 {
+    grid-row: 1;
+    grid-column: 4;
+    width: 90%;
+    align-self: center;
 }
 @media screen and (max-width: 768px) and (min-width: 425px) {
-    .pigfeet2 {
-        width: 0;
+    .certifikatlogo2 {
+        grid-column: 2;
     }
 }
 @media screen and (max-width: 425px) and (min-width: 320px) {
-    .pigfeet2 {
+    .certifikatlogo2 {
+        grid-column: 2;
         width: 0;
     }
 }
 @media screen and (max-width: 320px) {
-    .pigfeet2 {
+    .certifikatlogo2 {
+        grid-column: 2;
+        width: 0;
+    }
+}
+
+.certifikatlogo3 {
+    grid-row: 1;
+    grid-column: 5;
+    width: 85%;
+}
+@media screen and (max-width: 1200px) and (min-width: 960px) {
+    .certifikatlogo3 {
+        width: 95%;
+        height: 70%;
+        align-self: unset;
+    }
+}
+@media screen and (max-width: 960px) and (min-width: 768px) {
+    .certifikatlogo3 {
+        width: 80%;
+        align-self: center ;
+    }
+}
+@media screen and (max-width: 768px) and (min-width: 425px) {
+    .certifikatlogo3 {
+        grid-column: 3;
+        align-self: center;
+        width: 140%;
+    }
+}
+@media screen and (max-width: 425px) and (min-width: 320px) {
+    .certifikatlogo3 {
+        grid-column: 3;
+        width: 0;
+    }
+}
+@media screen and (max-width: 320px) {
+    .certifikatlogo3 {
+        grid-column: 3;
+        width: 0;
+    }
+}
+
+.certifikatlogo4 {
+    grid-row: 1;
+    grid-column: 6;
+    margin: 5px;
+    width: 80%;
+    height: 67%;
+}
+@media screen and (max-width: 1200px) and (min-width: 960px) {
+    .certifikatlogo4 {
+        width: 85%;
+    }
+}
+@media screen and (max-width: 960px) and (min-width: 768px) {
+    .certifikatlogo4 {
+        width: 80%;
+        height: 60%;
+        align-self: center ;
+    }
+}
+@media screen and (max-width: 768px) and (min-width: 425px) {
+    .certifikatlogo4 {
+        grid-column: 5;
+        align-self: center;
+        width: 150%;
+        height: 35%;
+    }
+}
+@media screen and (max-width: 425px) and (min-width: 320px) {
+    .certifikatlogo4 {
+        grid-column: 4;
+        width: 0;
+    }
+}
+@media screen and (max-width: 320px) {
+    .certifikatlogo4 {
+        grid-column: 4;
+        width: 0;
+    }
+}
+
+.certifikatlogo5 {
+    grid-row: 1;
+    grid-column: 7;
+    margin: 5px;
+    width: 100%;
+    height: 75%;
+    align-self: baseline;
+}
+@media screen and (max-width: 960px) and (min-width: 768px) {
+    .certifikatlogo5 {
+        width: 90%;
+        height: 70%;
+        align-self: center ;
+    }
+}
+@media screen and (max-width: 768px) and (min-width: 425px) {
+    .certifikatlogo5 {
+        grid-column: 8;
+        align-self: center;
+        height: 60%;
+        width: 160%;
+    }
+} 
+@media screen and (max-width: 425px) and (min-width: 320px) {
+    .certifikatlogo5 {
+        grid-column: 5;
+        width: 0;
+    }
+}
+@media screen and (max-width: 320px) {
+    .certifikatlogo5 {
+        grid-column: 5;
+        width: 0;
+    }
+}
+
+.certifikatlogo6 {
+    grid-row: 1;
+    grid-column: 8;
+    width: 110%;
+    height: 110px;
+    align-self: unset;
+}
+@media screen and (max-width: 1440px) and (min-width: 960px) {
+    .certifikatlogo6 {
+        width: 100%;
+        height: 90%;
+        align-self: baseline;
+    }
+} 
+@media screen and (max-width: 1200px) and (min-width: 960px) {
+    .certifikatlogo6 {
+        width: 100%;
+        height: 90%;
+        align-self: baseline;
+    }
+}
+@media screen and (max-width: 960px) and (min-width: 768px) {
+    .certifikatlogo6 {
+        width: 90%;
+        height: 75%;
+        align-self: center ;
+    }
+}
+@media screen and (max-width: 768px) and (min-width: 425px) {
+    .certifikatlogo6 {
+        grid-column: 10;
+        align-items: center;
+        height: 90%;
+    }
+}
+@media screen and (max-width: 425px) and (min-width: 320px) {
+    .certifikatlogo6 {
+        grid-column: 6;
+        width: 0;
+    }
+}
+@media screen and (max-width: 320px) {
+    .certifikatlogo6 {
+        grid-column: 6;
+        width: 0;
+    }
+}
+
+.certifikatlogo7 {
+    grid-row: 1;
+    grid-column: 9;
+    width: 55%;
+    align-self: center;
+}
+@media screen and (max-width: 960px) and (min-width: 768px) {
+    .certifikatlogo7 {
+        width: 70%;
+        height: 60%;
+        align-self: center;
+    }
+} 
+@media screen and (max-width: 768px) and (min-width: 425px) {
+    .certifikatlogo7 {
+        grid-column: 11;
+    }
+} 
+@media screen and (max-width: 425px) and (min-width: 320px) {
+    .certifikatlogo7 {
+        grid-column: 7;
+        width: 0;
+    }
+}
+@media screen and (max-width: 320px) {
+    .certifikatlogo7 {
+        grid-column: 7;
         width: 0;
     }
 }
