--- a/css/service.css
+++ b/css/service.css
@@ -11,3 +11,56 @@ body {
     grid-template-rows:auto;
     grid-template-columns:repeat(auto,1fr);
   }
+
+  header {
+    display:grid;
+    grid-column:1 / 5;
+    background-color: steelblue;
+    color: white;
+    font-size: 50px;
+    padding: 30px;
+    max-width: 100%;
+    text-shadow: 0px 3px 5px black;
+    font-weight: 800;
+    justify-items:center;
+    align-items:center;
+  }
+
+  ul {
+    list-style-type:none;
+    margin:0px;
+    padding:0px;
+  }
+  
+  .aletter {
+    font-weight: 900;
+    font-size: 55px;
+  }
+
+  nav {
+    grid-column:1 / 5;
+    grid-row:2 / 3;
+  }
+  
+  nav ul {
+    display:grid;
+    grid-template-rows:auto;
+    grid-template-columns:repeat(4,1fr);
+    justify-items:center;
+    border-top: solid;
+    border-bottom: double;
+    background-color: steelblue;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    justify-content: space-around;
+  }
+        
+  nav a {
+    text-decoration: none;
+    display: block;
+    padding: 20px;
+    color: white;
+    font-family: monospace;
+    font-size: 30px;
+  }
