--- a/css/service.css
+++ b/css/service.css
@@ -98,3 +98,26 @@ body {
   box-shadow:0px 2px 4px 0px rgba(0, 0, 0, 0.2);
   margin:20px 40px;
 }
+
+footer {
+    display:grid;
+    grid-template-rows:auto;
+    grid-template-columns:repeat(3,1fr);
+    grid-column:1 / 5;
+    grid-row: 7 / 8;
+    justify-items:center;
+    align-items:center;
+    background-color:steelblue;
+  }
+
+  footer ul {
+    display:grid;
+    grid-template-rows:auto;
+    grid-template-columns:repeat(6,1fr);
+    grid-gap:20px;
+    align-items:center;
+ }
+
+ #footer-text{
+    color:white;
+  }
