ändrat kommentar och mobile width

--- a/css/main.css
+++ b/css/main.css
@@ -179,7 +179,7 @@ footer {
     margin-top: 30px;
 }
 
-/* small desktop */
+/* large desktop */
 @media screen and (max-width: 1440px) {
     .grid-container2 {
         width: 900px;
@@ -240,7 +240,7 @@ footer {
 /* mobile */
 @media screen and (max-width: 768px) {
     .grid-container2 {
-        width: 768px;
+        width: 650px;
         grid-template-columns: repeat(1, auto);
         grid-template-rows: repeat(7, auto);
         grid-template-areas: 
