--- a/css/service.css
+++ b/css/service.css
@@ -102,21 +102,13 @@ body {
 footer {
     display:grid;
     grid-template-rows:auto;
-    grid-template-columns:repeat(3,1fr);
+    grid-template-columns:1fr;
     grid-column:1 / 5;
     grid-row: 7 / 8;
     justify-items:center;
     align-items:center;
     background-color:steelblue;
   }
-
-  footer ul {
-    display:grid;
-    grid-template-rows:auto;
-    grid-template-columns:repeat(6,1fr);
-    grid-gap:20px;
-    align-items:center;
- }
 
  #footer-text{
     color:white;
