--- a/css/service.css
+++ b/css/service.css
@@ -117,6 +117,8 @@ footer {
   button {
     width: 200px;
     height: 50px;
+    margin-top:20px;
+	margin-bottom:40px;
     border-radius: 1000px;
     background-color: #3d7ab3;
     color: white;
