La till footer till index och css

--- a/css/default.css
+++ b/css/default.css
@@ -52,31 +52,32 @@ nav a:hover {
     justify-items: center;
 } */
 
-footer{
-    position: fixed;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: steelblue;
-    color: white;
-    height: 100px;
-}
+footer {
+    display:grid;
+    grid-template-rows:auto;
+    grid-template-columns:1fr;
+    grid-column:1 / 5;
+    grid-row: 7 / 8;
+    justify-items:center;
+    align-items:center;
+    background-color:steelblue;
+  }
 
-.round-fig {
-    border-radius: 100%;
-    background-color: yellow;
-    width: 90px;
-    height: 90px;
-    place-self: center;
-    justify-self: center;
-}
+ #footer-text{
+    color:white;
+  }
 
-.button {
+  button {
     width: 200px;
     height: 50px;
-    border-radius: 25px;
+    margin-top:20px;
+	margin-bottom:40px;
+    border-radius: 1000px;
     background-color: #3d7ab3;
     color: white;
     place-self: center;
-}
+  }
+
+  button:hover {
+    background-color:#0a63a3;
+  }
