--- a/css/default.css
+++ b/css/default.css
@@ -29,7 +29,7 @@ nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 nav a {
@@ -37,8 +37,8 @@ nav a {
     display: block;
     padding: 20px;
     color: white;
-    font-family: monospace;
-    font-size: 30px;
+    font-family: 'Dancing Script', cursive;
+    font-size: 35px;
 }
 
 nav a:hover {
