Fixade google fonts css

--- a/css/service.css
+++ b/css/service.css
@@ -61,8 +61,8 @@ body {
     display: block;
     padding: 20px;
     color: white;
-    font-family: monospace;
-    font-size: 30px;
+    font-family: 'Dancing Script', cursive;
+    font-size: 35px;
   }
 
   .box-section-1 {
