--- a/css/service.css
+++ b/css/service.css
@@ -60,7 +60,7 @@ nav a {
     display: block;
     padding: 20px;
     color:white;
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Dancing Script';
     font-size: 35px;
 }
 
