--- a/css/main.css
+++ b/css/main.css
@@ -7,12 +7,14 @@
     --main-bg-color: steelblue;
     --main-text-color: black;
     --second-text-color: white;
+
+    /*Font-Family*/
+    --main-font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 body {
     box-sizing: border-box;  
     margin: 0;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .grid-container {
@@ -70,6 +72,7 @@ nav a:hover {
 .grid-container2 {
     grid-area: 3/1/4/2;
     display: grid;
+    font-family: var(--main-font-family);
     width: var(--main-width);
     margin: var(--main-margin);
     grid-template-columns: repeat(3, auto);
