--- a/css/contact.css
+++ b/css/contact.css
@@ -1,7 +1,6 @@
 
 header {
     display: flex;
-    font-family: helvetica, times new roman, fantasy, ;
     justify-content: center;
     background-color: steelblue;
     color: white;
@@ -44,6 +43,9 @@ nav a:hover {
     /* margin-bottom: 10px; */
     padding: 10px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; 
+    text-align: center;
+    font-size: 24px;
+
 }
 
 #porträtt{
@@ -84,6 +86,20 @@ nav a:hover {
 	margin-bottom:40px;
 
 }
+
+#sociala{
+
+    border: 4px ridge steelblue;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; 
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 0px;
+    padding: 2px;
+  }
+
+
 footer {
     display:grid;
     grid-template-rows:auto;
@@ -113,31 +129,9 @@ footer {
   button:hover {
     background-color:#0a63a3;
   }
-/* #form1 {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
-}
-#form2 {
-    display: flex;
-    flex-direction: row;
-} */
 
-/* submit:hover {
-    background-color:#0a63a3;
-    color:white;
-  } */
+  
 
-
-/* #infotext{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    font-family: heuristica, 'Times New Roman', Times, serif;
-    font-size: 16px;
-    margin: 10px 0px;
-    
-} */
 
 
 
